# SQL_Docs

./: LICENSE  Output_test.html  Readme.md  main.py  parser.py  pyproject.toml  query_test.sql  renderer.py  test.ipynb
Templates/: template.html
sql_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sqldocs/: __init__.py  main.py  parser.py  renderer.py
sqldocs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
